# RDT

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  USAGE_GUIDE.md  build.sh  check_compatibility.py  doc.md  pyproject.toml  requirements.txt  setup.py  test.py  test_model.py
configs/: base.yaml
rdt/: __init__.py  bert_init.py  data.py  model.py  trainer.py  utils.py
rdt/configs/: __init__.py  base.yaml  bert_baseline.yaml  cmlm.yaml  experiment.yaml  mdlm.yaml  mlm.yaml  rdt.yaml  roberta_baseline.yaml  roberta_baseline_config.yaml
rdt/data/: __init__.py  collators.py  datasets.py  rdt_preprocessor.py
rdt/evaluation/: __init__.py  evaluator.py  metrics.py
rdt/models/: __init__.py  baseline_models.py  bert_init.py  cmlm.py  mdlm.py  mlm.py  rdt.py  rdt_model.py  transformer.py
rdt/scripts/: __init__.py  evaluate.py  inference.py  plot_training.py  test_bert.py  test_bert_init.py  test_masking.py  train.py  train_roberta_baseline.py
rdt/training/: __init__.py  baseline_trainer.py  mlm_trainer.py  rdt_trainer.py
rdt/utils/: __init__.py  logger.py
