[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rdt-transformer"
version = "0.2.1" 
description = "Recursive Denoising Transformer - Progressive text denoising with adaptive computation. Includes MLM, CMLM, and MDLM baselines."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RDT Contributors"}
]
keywords = ["deep-learning", "transformer", "denoising", "nlp", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# [핵심] Kaggle/Colab 환경 충돌 방지를 위한 버전 고정
dependencies = [
    "torch>=2.0.0",
    
    # Datasets와 PyArrow 충돌 방지 (최신 버전 사용)
    "datasets>=2.21.0",
    "pyarrow>=15.0.0",
    
    # Protobuf 충돌 방지 (TensorFlow 호환성 및 에러 방지용 핵심)
    "protobuf>=3.20.3,<4.0.0",
    
    "transformers>=4.30.0",
    
    # Accelerate 최신 기능 (init_trackers 등) 활용
    "accelerate>=0.28.0",
    
    "pyyaml>=6.0",
    "wandb>=0.16.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "matplotlib>=3.5.0",
    "bert-score>=0.3.13",
    "nltk>=3.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[project.scripts]
rdt-train = "rdt.scripts.train:main"
rdt-evaluate = "rdt.scripts.evaluate:main"
rdt-inference = "rdt.scripts.inference:main"
rdt-test-masking = "rdt.scripts.test_masking:main"
rdt-plot = "rdt.scripts.plot_training:main"

[project.urls]
Homepage = "https://github.com/YeoJune/rdt"
Repository = "https://github.com/YeoJune/rdt"
Documentation = "https://github.com/YeoJune/rdt#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdt*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
rdt = ["configs/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]