[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rdt-transformer"
version = "0.2.2"
description = "Recursive Denoising Transformer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "RDT Contributors"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "datasets>=2.20.0",
    "pyarrow>=15.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "pyyaml>=6.0",
    "wandb>=0.16.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "bert-score>=0.3.13",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "isort"]

[project.scripts]
rdt-train = "rdt.scripts.train:main"
rdt-test-masking = "rdt.scripts.test_masking:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdt*"]